tests/semantic/fact_plus/fact_plus.err
Error: Binary function in fact in file fact_plus.dl at line 10
F(1+a,"AA").
--^----------
Warning: Variable a only occurs once in file fact_plus.dl at line 10
F(1+a,"AA").
----^--------
1 errors generated, evaluation aborted
